Fixed null transaction ID.